--- a/style.css
+++ b/style.css
@@ -298,6 +298,19 @@ body{
     width: 100%;
 }
 
+.form-floating {
+width: 100%;
+padding-top: 10px;
+padding: 1.5rem 1.35rem calc(9.75rem -2px) 1.54rem;
+border: none;
+outline: none;
+font-family: inherit;
+border-radius:20px ;
+font-weight: 600;
+color: #e1e1e1;
+}
+
+
 /*contact page*/
 #page-header{
     background-image: url('img/banner.png') ;
