--- a/cart.css
+++ b/cart.css
@@ -8,11 +8,46 @@
   --lg-font: 'Kaisei Tokumin', serif;
   --sm-font: 'Poppins', sans-serif;
   --pink: #e5345b;
+  
   --after-content: '2';
+}
+/* button */
+.bg-primary{
+  background-color: var(--pink)!important;
 }
 
 body {
   font-family: var(--sm-font);
+}
+
+
+/* navbar */
+.navbar{
+  -webkit-box-shadow: 0 3px 9px 3px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 3px 9px 3px rgba(0, 0, 0, 0.1);
+}
+.navbar-brand img{
+  width: 30px;
+}
+.navbar-brand span{
+  letter-spacing: 2px;
+  font-family: var(--lg-font);
+}
+
+.navbar-brand h5{
+  letter-spacing: 2px;
+  font-family: var(--lg-font);
+  font-weight: 600;
+}
+.nav-link:hover{
+  color: var(--pink)!important;
+}
+.navbar-nav .nav-item .active {
+  color: var(--pink)!important; 
+}
+
+.nav-item{
+  border-bottom: 0.5px solid rgba(0, 0, 0, 0.05);
 }
 
 
@@ -42,6 +77,7 @@ body {
 .shop-item-image {
   height: 250px;
 }
+
 
 /* align*/
 .special-img {
@@ -264,9 +300,6 @@ body {
   color: rgb(255, 31, 31);
 
 }
-.nav a{
-  display: none;
-}
 
 .totalPriceCart {
   display: flex;
@@ -285,7 +318,70 @@ body {
   font-weight: 500; 
 }
 
-.priceView {
+.priceView,
+.Shipping,
+.Total-item {
   margin: 10px;
 
 }
+/* 
+cart with table */
+#cart-container,
+#cart-bottom{
+  overflow-x: auto;
+}
+#cart-container table,
+#cart-bottom table{
+  border-collapse: collapse;
+  width: 100%;
+  table-layout: fixed;
+  white-space: nowrap;
+}
+
+#cart-container table thead{
+  font-weight: 700;
+
+}  
+
+#cart-container table thead td{
+  background: #e5345b;
+  color: #fff;
+  border: none;
+  padding: 6px 0;
+  padding-left: 20px;
+}
+
+#cart-container table td{
+  border: 1px solid #b6b3b3;
+  margin-top: 20px;
+  text-align: center;
+}
+
+#cart-container table td:nth-child(1),
+#cart-container table td:nth-child(2),
+#cart-container table td:nth-child(3),
+#cart-container table td:nth-child(4),
+#cart-container table td:nth-child(5){
+  width: 200px;
+
+}
+#cart-container table td:nth-child(6){
+  width: 120px;
+}
+
+
+
+#cart-bottom .totalt h5{
+  background: #e5345b;
+  color: #fff;
+  border: none;
+  padding: 6px 12px;
+  margin-left: -13px;
+  margin-right: -13px;
+  font-weight: 700;
+border: 1px solid #b6b3b3;
+ }
+ 
+ #cart-bottom .totalt{
+  border: 1px solid #b6b3b3 ;
+ } 
