--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body{
     letter-spacing: 2px;
     font-family: var(--lg-font);
 }
+
 .navbar-brand h5{
     letter-spacing: 2px;
     font-family: var(--lg-font);
@@ -53,6 +54,10 @@ body{
 .nav-link:hover{
     color: var(--pink)!important;
 }
+.navbar-nav .nav-item .active {
+    color: var(--pink)!important; 
+}
+
 .nav-item{
     border-bottom: 0.5px solid rgba(0, 0, 0, 0.05);
 }
@@ -90,7 +95,20 @@ body{
         -ms-transform: translateY(-50%);
             transform: translateY(-50%);
 }
+/* about */
+#about{
+    background-color: rgba(179, 179, 179, 0.05);
+}
 
+.nav-pills .nav-link{
+    color: #e5345b;
+}
+
+.nav-pills .nav-link.active,
+.nav-pills .show > .nav-link {
+  color: #fff;
+  background: #e5345b;
+}
 
 
 /* collection */
@@ -109,7 +127,10 @@ body{
     height: 46px;
     border-radius: 50%;
 }
-
+.collection-img img{
+    width: 100%;
+    height: 400px;
+}
 /* special */
 .special-img span{
     top: 20px;
@@ -157,6 +178,30 @@ body{
 
 
 /*services*/
+#page-header.services-header{
+    background-image: url('img/cats/carousel-1.jpg') ;
+    width: 100%;
+    height: 50vh;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 14px;
+    margin-top:60px;;
+}
+.services-header h2{
+    font-weight: 600;
+   
+}
+
+#page-header .services p{
+    color: #fff;
+    font-weight: 500;
+    
+}
+
+
 .card {
     z-index: 1;
     overflow: hidden;
@@ -172,7 +217,7 @@ body{
     position: absolute;
     left: -100%;
     top: 0%;
-    background: #97979f;
+    background: #ba808c;
     width: 100%;
     height: 100%;
     transition: 0.5s;
@@ -189,12 +234,14 @@ body{
     width:100% ;
   }
 /*end of services */
- /*-------------------------------*/
+
+
+  /*-------------------------------*/
     /* Testimonials*/
 /*-------------------------------*/
 
 .wrapper{
-    background: linear-gradient(90deg,#c8a1c5 0%, #b398aa 100%);
+    background: linear-gradient(90deg,#f0e3ef 0%, #f1e9ee 100%);
     min-height: 80vh;
     margin: 0 auto;
     display: flex;
@@ -218,7 +265,7 @@ body{
     text-align: center;
     font-weight: 300;
     margin-bottom: 80px;
-    color: #fff;
+    color: var(--pink);
 
 }
 .cards{
@@ -243,7 +290,7 @@ body{
 .card1 img{
     height: 90px;
     width: 90px;
-    border: 2px solid #e5345b;
+    border: 2px solid #e65675;
     border-radius: 50%;
     position: absolute;
     top: -40px;
@@ -273,7 +320,7 @@ body{
 .card1:hover{
     transform: scale(1.3);
     color: #333;
-    background: #fff;
+    background: #c4697c;
     z-index: 10000;
 }
 @media(max-width:768px)
@@ -287,6 +334,16 @@ body{
         margin: 20px 0;
     }
 }
+
+
+
+
+
+
+/* add-to-cart-/
+
+
+
 
 /*Booking Form*/
 .booking{
@@ -309,11 +366,12 @@ border-radius:20px ;
 font-weight: 600;
 color: #e1e1e1;
 }
+/*end of booking */
 
 
 /*contact page*/
 #page-header{
-    background-image: url('img/banner.png') ;
+    background-image: url('img/cats/carousel-1.jpg') ;
     width: 100%;
     height: 50vh;
     background-size: cover;
@@ -332,7 +390,7 @@ color: #e1e1e1;
 
 /*About Page */
 #page-header.about-header{
-    background-image: url('img/banner.png') ;
+    background-image: url('img/cats/carousel-1.jpg') ;
 
 }
 
@@ -439,6 +497,65 @@ h6{
     width: 100%;
     height: 100%;
 } 
+#contact-details {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.details {
+  width: 100%;
+  text-align: center;
+  padding: 50px;
+  box-sizing: border-box;
+}
+
+.map {
+  width: 100%;
+  height: 450px;
+  margin: 50px 0;
+}
+
+@media (min-width: 768px) {
+  .details {
+    width: 50%;
+    text-align: left;
+    padding: 100px;
+  }
+
+  .map {
+    width: 50%;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 767px) {
+  .details {
+    width: 100%;
+    text-align: left;
+    padding: 50px;
+  }
+
+  .map {
+    width: 100%;
+    height: 300px;
+    margin: 50px 0;
+  }
+}
+
+@media (max-width: 599px) {
+  .details {
+    width: 100%;
+    text-align: left;
+    padding: 25px;
+  }
+
+  .map {
+    width: 100%;
+    height: 200px;
+    margin: 25px 0;
+  }
+}
+
+
 /* Form */
 #form-details form{
     width: 65%;
@@ -498,18 +615,6 @@ h6{
 }
 
 
-
-
-
-
-
-
-
-/* about */
-#about{
-    background-color: rgba(179, 179, 179, 0.05);
-}
-
 /* newsletter */
 #newsletter{
     background-color: rgba(179, 179, 179, 0.05);
@@ -534,7 +639,9 @@ h6{
     border-color: #000;
 }
 
-/* add-to-cart-/
+
+
+
 
 
 
